# KMP-TinyExpr

./: README.md  gradle.properties  settings.gradle.kts
.fleet/: receipt.json
composeApp/: build.gradle.kts
composeApp/native/: CMakeLists.txt  libtinyexpr_jni.dylib  tinyexpr_jni.c
composeApp/nativeInterop/cinterop/: tinyexpr.def
composeApp/src/androidMain/kotlin/org/adman/kmp/tiny/expr/: MainActivity.kt  Platform.android.kt  TinyExprJNI.kt
composeApp/src/androidMain/res/values/: strings.xml
composeApp/src/commonMain/kotlin/org/adman/kmp/tiny/expr/: App.kt  Greeting.kt  Platform.kt
composeApp/src/desktopMain/kotlin/org/adman/kmp/tiny/expr/: Platform.jvm.kt  TinyExprJNI.kt  main.kt
composeApp/src/iosMain/kotlin/org/adman/kmp/tiny/expr/: MainViewController.kt  Platform.ios.kt  TinyExpr.kt
composeApp/src/wasmJsMain/kotlin/org/adman/kmp/tiny/expr/: Platform.wasmJs.kt  main.kt
composeApp/src/wasmJsMain/resources/: index.html
iosApp/Configuration/: Config.xcconfig
iosApp/iosApp.xcodeproj/: project.pbxproj
